// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Board Default 1`] = `
<div
  className="MuiBox-root MuiBox-root-2"
  data-testid="board"
>
  <div
    className="MuiBox-root MuiBox-root-3"
  >
    <h1
      className="MuiTypography-root MuiTypography-h4"
    >
      Great Red Board... argh
    </h1>
  </div>
  <hr
    className="MuiDivider-root"
  />
  <div
    className="MuiBox-root MuiBox-root-40"
  >
    <div
      className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-4"
    >
      <div
        className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 MuiGrid-grid-sm-3"
      >
        <div
          className="MuiPaper-root MuiCard-root MuiPaper-elevation1 MuiPaper-rounded"
        >
          <div
            className="MuiCardHeader-root"
          >
            <div
              className="MuiCardHeader-avatar"
            >
              <div
                className="MuiAvatar-root MuiAvatar-circle MuiAvatar-colorDefault"
              >
                M
              </div>
            </div>
            <div
              className="MuiCardHeader-content"
            >
              <span
                className="MuiTypography-root MuiCardHeader-title MuiTypography-body2 MuiTypography-displayBlock"
              >
                my test story
              </span>
            </div>
          </div>
          <div
            className="MuiCardActions-root MuiCardActions-spacing"
          >
            <button
              className="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSizeSmall MuiButton-sizeSmall"
              disabled={false}
              onBlur={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={0}
              type="button"
            >
              <span
                className="MuiButton-label"
              >
                Edit
              </span>
            </button>
            <button
              className="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSecondary MuiButton-textSizeSmall MuiButton-sizeSmall"
              disabled={false}
              onBlur={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={0}
              type="button"
            >
              <span
                className="MuiButton-label"
              >
                Delete
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <button
      aria-label="add"
      className="MuiButtonBase-root MuiFab-root WithStyles(ForwardRef(Fab))-root-220 WithStyles(ForwardRef(Fab))-root-221 MuiFab-extended MuiFab-primary"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      spacing={16}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiFab-label"
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root AddIcon-root-232 AddIcon-root-233"
          focusable="false"
          role="presentation"
          spacing={8}
          viewBox="0 0 24 24"
        >
          <path
            d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
          />
        </svg>
        Add a Card
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots Boards Default 1`] = `
Array [
  <div
    className="MuiBox-root MuiBox-root-244"
  >
    <h1
      className="MuiTypography-root MuiTypography-h4"
    >
      Boards
    </h1>
  </div>,
  <hr
    className="MuiDivider-root"
  />,
  <div
    className="MuiBox-root MuiBox-root-281"
  >
    <div
      className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-4"
    >
      <div
        className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 MuiGrid-grid-sm-3"
      >
        <div
          className="MuiPaper-root MuiCard-root MuiPaper-elevation1 MuiPaper-rounded"
        >
          <button
            className="MuiButtonBase-root MuiCardActionArea-root"
            disabled={false}
            onBlur={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex={0}
            type="button"
          >
            <a
              className="Link-root-420"
              href="/boards/1"
              onClick={[Function]}
            >
              <div
                className="MuiCardHeader-root"
              >
                <div
                  className="MuiCardHeader-avatar"
                >
                  <div
                    className="MuiAvatar-root MuiAvatar-circle MuiAvatar-colorDefault"
                  >
                    B
                  </div>
                </div>
                <div
                  className="MuiCardHeader-content"
                >
                  <span
                    className="MuiTypography-root MuiCardHeader-title MuiTypography-body2 MuiTypography-displayBlock"
                  >
                    Board A
                  </span>
                </div>
              </div>
            </a>
            <span
              className="MuiCardActionArea-focusHighlight"
            />
          </button>
          <div
            className="MuiCardActions-root MuiCardActions-spacing"
          >
            <button
              className="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSizeSmall MuiButton-sizeSmall"
              disabled={false}
              onBlur={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={0}
              type="button"
            >
              <span
                className="MuiButton-label"
              >
                Edit
              </span>
            </button>
            <button
              className="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSecondary MuiButton-textSizeSmall MuiButton-sizeSmall"
              disabled={false}
              onBlur={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={0}
              type="button"
            >
              <span
                className="MuiButton-label"
              >
                Delete
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 MuiGrid-grid-sm-3"
      >
        <div
          className="MuiPaper-root MuiCard-root MuiPaper-elevation1 MuiPaper-rounded"
        >
          <button
            className="MuiButtonBase-root MuiCardActionArea-root"
            disabled={false}
            onBlur={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex={0}
            type="button"
          >
            <a
              className="Link-root-420"
              href="/boards/2"
              onClick={[Function]}
            >
              <div
                className="MuiCardHeader-root"
              >
                <div
                  className="MuiCardHeader-avatar"
                >
                  <div
                    className="MuiAvatar-root MuiAvatar-circle MuiAvatar-colorDefault"
                  >
                    B
                  </div>
                </div>
                <div
                  className="MuiCardHeader-content"
                >
                  <span
                    className="MuiTypography-root MuiCardHeader-title MuiTypography-body2 MuiTypography-displayBlock"
                  >
                    Board B
                  </span>
                </div>
              </div>
            </a>
            <span
              className="MuiCardActionArea-focusHighlight"
            />
          </button>
          <div
            className="MuiCardActions-root MuiCardActions-spacing"
          >
            <button
              className="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSizeSmall MuiButton-sizeSmall"
              disabled={false}
              onBlur={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={0}
              type="button"
            >
              <span
                className="MuiButton-label"
              >
                Edit
              </span>
            </button>
            <button
              className="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSecondary MuiButton-textSizeSmall MuiButton-sizeSmall"
              disabled={false}
              onBlur={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={0}
              type="button"
            >
              <span
                className="MuiButton-label"
              >
                Delete
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 MuiGrid-grid-sm-3"
      >
        <div
          className="MuiPaper-root MuiCard-root MuiPaper-elevation1 MuiPaper-rounded"
        >
          <button
            className="MuiButtonBase-root MuiCardActionArea-root"
            disabled={false}
            onBlur={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex={0}
            type="button"
          >
            <a
              className="Link-root-420"
              href="/boards/3"
              onClick={[Function]}
            >
              <div
                className="MuiCardHeader-root"
              >
                <div
                  className="MuiCardHeader-avatar"
                >
                  <div
                    className="MuiAvatar-root MuiAvatar-circle MuiAvatar-colorDefault"
                  >
                    B
                  </div>
                </div>
                <div
                  className="MuiCardHeader-content"
                >
                  <span
                    className="MuiTypography-root MuiCardHeader-title MuiTypography-body2 MuiTypography-displayBlock"
                  >
                    Board C
                  </span>
                </div>
              </div>
            </a>
            <span
              className="MuiCardActionArea-focusHighlight"
            />
          </button>
          <div
            className="MuiCardActions-root MuiCardActions-spacing"
          >
            <button
              className="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSizeSmall MuiButton-sizeSmall"
              disabled={false}
              onBlur={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={0}
              type="button"
            >
              <span
                className="MuiButton-label"
              >
                Edit
              </span>
            </button>
            <button
              className="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSecondary MuiButton-textSizeSmall MuiButton-sizeSmall"
              disabled={false}
              onBlur={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={0}
              type="button"
            >
              <span
                className="MuiButton-label"
              >
                Delete
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 MuiGrid-grid-sm-3"
      >
        <div
          className="MuiPaper-root MuiCard-root MuiPaper-elevation1 MuiPaper-rounded"
        >
          <button
            className="MuiButtonBase-root MuiCardActionArea-root"
            disabled={false}
            onBlur={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex={0}
            type="button"
          >
            <a
              className="Link-root-420"
              href="/boards/4"
              onClick={[Function]}
            >
              <div
                className="MuiCardHeader-root"
              >
                <div
                  className="MuiCardHeader-avatar"
                >
                  <div
                    className="MuiAvatar-root MuiAvatar-circle MuiAvatar-colorDefault"
                  >
                    B
                  </div>
                </div>
                <div
                  className="MuiCardHeader-content"
                >
                  <span
                    className="MuiTypography-root MuiCardHeader-title MuiTypography-body2 MuiTypography-displayBlock"
                  >
                    Board D
                  </span>
                </div>
              </div>
            </a>
            <span
              className="MuiCardActionArea-focusHighlight"
            />
          </button>
          <div
            className="MuiCardActions-root MuiCardActions-spacing"
          >
            <button
              className="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSizeSmall MuiButton-sizeSmall"
              disabled={false}
              onBlur={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={0}
              type="button"
            >
              <span
                className="MuiButton-label"
              >
                Edit
              </span>
            </button>
            <button
              className="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSecondary MuiButton-textSizeSmall MuiButton-sizeSmall"
              disabled={false}
              onBlur={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={0}
              type="button"
            >
              <span
                className="MuiButton-label"
              >
                Delete
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      className="MuiBox-root MuiBox-root-465"
    >
      <button
        aria-label="add"
        className="MuiButtonBase-root MuiFab-root WithStyles(ForwardRef(Fab))-root-466 WithStyles(ForwardRef(Fab))-root-467 MuiFab-extended MuiFab-primary"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        spacing={16}
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiFab-label"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root AddIcon-root-478 AddIcon-root-479"
            focusable="false"
            role="presentation"
            spacing={8}
            viewBox="0 0 24 24"
          >
            <path
              d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
            />
          </svg>
          Create New Board
        </span>
      </button>
    </div>
  </div>,
]
`;

exports[`Storyshots ErrorPage Default 1`] = `
<div
  className="MuiTypography-root MuiTypography-body1"
>
  <div
    className="MuiBox-root MuiBox-root-520"
  >
    Oops... The link you are trying to reach cannot be found
  </div>
  <div
    className="MuiBox-root MuiBox-root-521"
  >
    <a
      href="/"
      onClick={[Function]}
    >
      Go Home
    </a>
  </div>
</div>
`;

exports[`Storyshots Tile Default 1`] = `
<div
  className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 MuiGrid-grid-sm-3"
>
  <div
    className="MuiPaper-root MuiCard-root MuiPaper-elevation1 MuiPaper-rounded"
  >
    <div
      className="MuiCardHeader-root"
    >
      <div
        className="MuiCardHeader-avatar"
      >
        <div
          className="MuiAvatar-root MuiAvatar-circle MuiAvatar-colorDefault"
        >
          B
        </div>
      </div>
      <div
        className="MuiCardHeader-content"
      >
        <span
          className="MuiTypography-root MuiCardHeader-title MuiTypography-body2 MuiTypography-displayBlock"
        >
          Board A
        </span>
      </div>
    </div>
    <div
      className="MuiCardActions-root MuiCardActions-spacing"
    >
      <button
        className="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSizeSmall MuiButton-sizeSmall"
        disabled={false}
        onBlur={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiButton-label"
        >
          Edit
        </span>
      </button>
      <button
        className="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSecondary MuiButton-textSizeSmall MuiButton-sizeSmall"
        disabled={false}
        onBlur={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiButton-label"
        >
          Delete
        </span>
      </button>
    </div>
  </div>
</div>
`;
